Fixed alignment and padding issues

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -128,10 +128,17 @@ section .container {
   margin: 0;
 }
 
+.zero-pad-mar {
+  padding: 0;
+  margin: 0;
+  margin-left: -30%;
+}
+
 .title-column {
   color: #6C63FF;
   text-align: center;
   align-content: flex-start;
+  margin-left: -8%;
 }
 
 .skills li {
